<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BaseballMath!</string>
    <string name="app_name">Baseball, Math</string>
    
    <string name="newgame">New Game</string>
    <string name="continuegame">Continue Game</string>
    <string name="viewoldgame">View Old Game</string>
    
    <string name="selectclub">Select Club</string>
    <string name="addclub">Add Club</string>
    <string name="clubselected"></string>
        
    <string name="selectteam">Select Team</string>
    <string name="addteam">Add Team</string>
    <string name="teamselected"></string>
    
    <string name="selectplayer">Select Player</string>
    <string name="addplayer">Add Player</string>
    <string name="playerselected"></string>

    <string name="listplayers">List Players</string>
    <string name="addplayers">Add Players</string>
    <string name="no_players">No Players Added</string>
    <string name="enterplayer">Enter new player name</string>
    
    <string name="enterclub">Enter new player name</string>

</resources>
