<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/selectclub"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/selectclub"/>
	    <Button android:id="@+id/addclub"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/addclub"/>
	    <TextView android:id="@+id/clubselected" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/clubselected" />
	</LinearLayout>
	
	<LinearLayout android:id="@+id/teamsection" android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/selectteam"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/selectteam"/>
	    <Button android:id="@+id/addteam"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/addteam"/>
	    <TextView android:id="@+id/teamselected" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/teamselected" />
	</LinearLayout>
	
	<LinearLayout android:id="@+id/playersection" android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/selectplayer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/selectplayer"/>
	    <Button android:id="@+id/addplayer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/addplayer"/>
	    <TextView android:id="@+id/playerselected" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/playerselected" />
	</LinearLayout>


</LinearLayout>
