<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <Button
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/newgame"/>
    <Button
        android:id="@+id/continuegame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
        android:layout_below="@+id/newgame"
        android:layout_marginLeft="10dip"
        android:text="@string/continuegame"/>
    <Button
    	android:id="@+id/viewoldgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/continuegame"
        android:text="@string/viewoldgame"/> />
</RelativeLayout>